create github pages

--- a/CV01.html
+++ b/CV01.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="W6Hp/e8ic+GGixNNgrIedEwGEJb36AZpjTmtX+gX+se0p6MUtBoo43+DMRcsTD0ro3S1ijWz3IoHeZxFppf/6WElbKqBEKgUVQc4Duike1e27WRMTVE8mIjC+FqLyq4=.fZ9nEcFuJS3K8MYwpaP9c88D3vV1OupVbJSpnC5zF4sy3zn+fNCuiOXCm1PDl5FgdXQR/oVa/qUB+hvx9QgLKHEY4Fu05nfrC+l9AwN2f3LGaldA/T8q9bi4BsIuR/ul">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="clnMxYahmqCHLFPOhaV+MU2wUDsAuYYXMfhOFiXCY2pbjFDqvTS2b0h5PNGUUg2yyHCDzI/JzoxlXYEVjrFvfWaV/k9hD9XEUIfzsd4hqmLWecqYLXdQfNaPmHJUNOiQ.XqxgEjaK5RQPdHIX5BwFxxHDahJFRl5tkqoh1RM8VpG+y2N+JDdqcLN+RZ2Ww5nazHeSFVb4Rd+ntUtOwB2q2+UfgMVJojtWo/LuKcFuTnAA4PgWMWKhjqsZxGxn2ZRc">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -243,8 +243,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
