--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bQNSA72eyAcpx56Ad2CDgBXL6jBip6NavwzMFXmAArRf0LDCoKt7Jq2SB4kMKDQrAxwhV4pwzZwLZfORLqV3Qe8qD/FNDIYAsfUF8pJ3dmZJtHi2du/1iniyTAw0TyqB.kHKR2ipclopiijQSkffzfYwGnqMr3qNVXYaaxYMIRcHj7ePG2WtYetKjIzkM8a8c/AdDhoy3IgJ9ulHDYcLpaRaqTrpn0R+i8xOqrJqZ7Bby3ACAULEx18l2c/HKonM5">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YYljRNET7VSoBsFPu3Ovj9Uhza2q19sb37++npygghIdQTn0Imxi1PrLwMRJgC89GDZfXCIDtGozxvDOXRO/PzEw3CDIhs7teVN8AQrUbaSiq3AB4ozB1jHFiao0lCpQ.ZgoT+iIl5lVXiJw8Qzw0Ni7JEUvymIomabfBA11y8BbnvryoewKEk3yMRxAhqKUy0AJM9JjBBAbKqX/0XgE12QR2cEfAdKB4QEyYZ+xKhyaftJl8LoT+Xl/HkLSvmMXr">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -242,8 +242,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
