--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
@@ -616,8 +616,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
