--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DxEIWLUyDKIu7axdMRImydXRUJ8XaIWn52lFL18bEkpjJPvx0EGxfDYvApcQCL4oOa4Pb6ANgjtMGgfMey/ilI6yEGdamI/S6yqj5VWn4iJ2i/DepcTqI7sf9WSudZ6K.oqxguLRaoAStTNTF4hjdbmcXLwmqGvI8rsdfP8vSwtvwAdqGKZ3jEExQ3uk9jCo7ONfnbmPHr5HH8vZscYS2CSxKMun/3M5VwaEjPm0y7U/NK3HC8t+LVJHrnTystbSe">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="S8A3uK+4Sypujhd+tRanhayFAy5MyUrp5RJtuGIaWW/jDaLFWdmtGow3S9/Ku98uXHNBc03akia5SxkEcRIRjU2fObUE2SbXJv/v0ar/rWfFk807ttmfhlYriIkuJDtJ.BxYbcU593jFz6kYQ4NQxuON/waKzlnst89XcBs/CjsGjMdHfBbbQ58vzAkHNm81RQBHA3SjhbZpjk4qHt9dxtmC2lhPCUXGT76LyVXQZKa1oiEMQnHrIPxvbbUOyPW2g">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -318,8 +318,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
