--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ML/9AkUEzL1fTiXWF5V7dzkbdcQZ/oUF5f0FQ6w/uhiSVs76tbZWBOIvhXwTps/uAg3g0Qu/4SaYzrU9Yjd/nwwGsKgszoiiQh7iBO/tEnO+Og2TDHadGFefIX6ITXC5.dfSOMKxp4CKTfUYe6xwhuX3Y1UMz7xDFkxvngrR//t8xvpo6ppNuFxNc8CZY7B01XrmRHhlJUOi9jOX8hZPSTu62BYhi7AYyErXskCAVgF4hsfpMgsJAARaeKHStD7IH">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uunQWnq2xgSZo2v1on2uFuykRgwAW/yCBrjGUNxe/So/18fFuFUJ2w/5G7mzS3URu8Vc0AaMDHf4arzzLAI/e/p7YGc2WCExtfGlrjM1/ONijm6Bo0jszLu0hN+lNvXm.XltUMy0nXyZb2oyFObFXe+Eub5gwvHcpMX7zguezPC1tNwSOQyILMHn4GCqZYykfrFyCJrt+8s6OnnDToxw9mINAHG2ZYAFtBOBD2zD64TQzgkUBQTQDHbiyV7extiaJ">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -318,8 +318,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
