--- a/JobAdd.html
+++ b/JobAdd.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BmixkTDAIFhajg11d8glZBxEnWNnxGKcPlAkcjYTgzMnJBTQXhBonVV4pTKvu6Mprp3cmx3+O/KLMoaFxDBvVIWov7L8I8TRm9tLpe4kNDSl65x51B2Et8IqTihNMWnI.wIAygnr317wpgIcBQeYbCYt3/kVjBBtsu2UzKMV+XDbjvMIiud9eg0kfa52RwrFakHw0MuMQ9UaVcCRt/HAmEVvwZyB9SKfojnYQPfczyIyz/bNPgFatYzULt86GMaD+">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="p1MJ866gyJyIuJl4BndXz/t/HoG3hnahW+r5sm7QImEqofHGRX5jnpvTv8nzUtA+JvoAhNWRUFxCR4hGb0xxLq71bWGTGmIaZrjZikdDJKo1UFDaqup5SvFAHt/zFUFP.rxa1BkGIzU3TMZzeFPbNHl6QmP7SNxvikbAf7uYhia4peGB8euIh9xoJp09JZc/kyZhBgGxaWKHTc1N2uab+SjyaeNWZNqu67CTMeL19q5AzP0KoycUpYvHGqd+qAe3W">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -384,8 +384,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
