--- a/Local.html
+++ b/Local.html
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
 
     
 
@@ -498,7 +498,7 @@
     </div>
 </section>
 
-<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="394" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="1156" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-wowslider">
         <div class="ws_images">
             <ul>
@@ -939,8 +939,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   <script async src="assets/wowslider-effect/blur/script.js"></script>
 </body>
 </html>
